[gd_scene load_steps=24 format=3 uid="uid://cfs5eol8cgnfy"]

[ext_resource type="PackedScene" uid="uid://djd0edge80xai" path="res://characters/_base/character/quiver_base_character.tscn" id="1_pigv0"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/tax_man.gd" id="2_wtxta"]
[ext_resource type="PackedScene" uid="uid://cyax8ahrme87s" path="res://characters/enemies/tax_man/tax_man_skin.tscn" id="3_0tid4"]
[ext_resource type="Resource" uid="uid://b5h70e60moyfu" path="res://characters/enemies/tax_man/resources/tax_man_attributes.tres" id="3_3jl8s"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_ground.gd" id="4_kio4a"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/quiver_action_move.gd" id="5_5ic7l"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/move_actions/quiver_action_follow.gd" id="6_45ydq"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/ground_actions/move_actions/quiver_action_idle_ai.gd" id="7_ohh3m"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/resources/custom_states/grab_reject.gd" id="9_55v5w"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_attack.gd" id="10_ptkg4"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/resources/custom_states/taxman_hurt.gd" id="11_6u64b"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/action_states/quiver_action_die_ai.gd" id="11_7kn5i"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/resources/custom_states/dash_attack_action.gd" id="11_f2uve"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/resources/custom_states/knockout_kneeled_action.gd" id="12_4lwgy"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_wait.gd" id="13_oq38d"]
[ext_resource type="Script" path="res://characters/enemies/tax_man/tax_man_ai_state_machine.gd" id="15_ylsp3"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_choose_random_behavior.gd" id="17_5k63d"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_go_to_position.gd" id="17_7i618"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/utilities/custom_nodes/state_machines/quiver_state_sequence.gd" id="18_thg3o"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_chase_closest_player.gd" id="19_3m5ed"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_call_attack.gd" id="20_38efy"]
[ext_resource type="Script" path="res://addons/quiver.beat_em_up/characters/ai/states/quiver_ai_wait_for_state.gd" id="22_wmall"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ntaek"]
radius = 18.0
height = 278.0

[node name="TaxMan" instance=ExtResource("1_pigv0")]
collision_layer = 16
collision_mask = 14
script = ExtResource("2_wtxta")
max_damage_in_one_combo = 0.1
health_threshold_phase_one = 1.0
health_threshold_phase_two = 0.5
health_threshold_phase_three = 0.15
health_threshold_phase_die = 0.0
_path_ai_state_machine = NodePath("AiStateMachine")
_debug_draw_lane_limits = false
_attributes = ExtResource("3_3jl8s")

[node name="Skin" parent="." index="0" instance=ExtResource("3_0tid4")]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]
modulate = Color(0, 0.6, 0.701961, 1)
position = Vector2(0, -8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ntaek")
metadata/collision_type = "default"

[node name="StateMachine" parent="." index="2"]
initial_state = NodePath("Ground/Move/IdleAi")
should_process_input = false

[node name="Ground" type="Node" parent="StateMachine" index="0"]
script = ExtResource("4_kio4a")
path_hurt = "Ground/Hurt"
path_knockout = "Ground/Hurt"
path_grabbed = "Ground/GrabReject"

[node name="Move" type="Node" parent="StateMachine/Ground" index="0"]
script = ExtResource("5_5ic7l")
path_jump_state = "Air/Jump/Impulse"
path_attack_state = "Ground/Combo1"

[node name="Follow" type="Node" parent="StateMachine/Ground/Move" index="0"]
script = ExtResource("6_45ydq")
walk_skin_state = &"walk"
path_next_state = "Ground/Move/IdleAi"
turning_speed_modifier = 0.6

[node name="IdleAi" type="Node" parent="StateMachine/Ground/Move" index="1"]
script = ExtResource("7_ohh3m")
skin_state = &"idle"

[node name="GrabReject" type="Node" parent="StateMachine/Ground" index="1"]
script = ExtResource("9_55v5w")
skin_state = &"grab_reject"
path_next_state = "Ground/Move/IdleAi"

[node name="AttackArea" type="Node" parent="StateMachine/Ground" index="2"]
script = ExtResource("10_ptkg4")
skin_state = &"attack_area"
can_combo = false
path_next_state = "Ground/Move/IdleAi"
parent_should_enter = true
parent_should_exit = true
parent_should_process = true

[node name="AttackRetaliate" type="Node" parent="StateMachine/Ground" index="3"]
script = ExtResource("10_ptkg4")
skin_state = &"grab_reject"
can_combo = false
path_next_state = "Ground/Move/IdleAi"
parent_should_enter = true
parent_should_exit = true
parent_should_process = true

[node name="AttackCombo" type="Node" parent="StateMachine/Ground" index="4"]
script = ExtResource("10_ptkg4")
skin_state = &"attack_combo"
can_combo = false
path_next_state = "Ground/Move/IdleAi"
parent_should_enter = true
parent_should_exit = true
parent_should_process = true

[node name="AttackDash" type="Node" parent="StateMachine/Ground" index="5"]
script = ExtResource("11_f2uve")
dash_skin_state = &"attack_dash_begin"
attack_skin_state = &"attack_dash_end"
path_next_state = "Ground/Move/IdleAi"

[node name="Hurt" type="Node" parent="StateMachine/Ground" index="6"]
script = ExtResource("11_6u64b")
skin_state_hurt_light = &"hurt_light"
skin_state_hurt_medium = &"hurt_medium"
skin_state_hurt_knockout = &"hurt_knockout"
path_knockout = "Ground/KnockoutKneeled"
path_retaliate = "Ground/AttackRetaliate"
path_idle = "Ground/Move/IdleAi"

[node name="KnockoutKneeled" type="Node" parent="StateMachine/Ground" index="7"]
script = ExtResource("12_4lwgy")
skin_state = &"knockout_kneeled"
path_attack_area = "Ground/AttackArea"
path_die = "DieAi"

[node name="DieAi" type="Node" parent="StateMachine" index="1"]
script = ExtResource("11_7kn5i")
skin_state = &"die"

[node name="QuiverAiStateMachine" type="Node" parent="." index="3"]
script = ExtResource("15_ylsp3")
ai_state_hurt = "WaitForIdle"
ai_state_after_reset = "Wait"
initial_state = NodePath("Phase1/Wait")
should_process_input = false

[node name="GoToPosition" type="Node" parent="QuiverAiStateMachine" index="0"]
script = ExtResource("17_7i618")
path_follow_state = "Ground/Move/Follow"

[node name="WaitForIdle" type="Node" parent="QuiverAiStateMachine" index="1"]
script = ExtResource("22_wmall")
path_ready_state = "Ground/Move/IdleAi"

[node name="Phase1" type="Node" parent="QuiverAiStateMachine" index="2"]

[node name="Wait" type="Node" parent="QuiverAiStateMachine/Phase1" index="0"]
script = ExtResource("13_oq38d")
use_range = true
wait_time = 0.0
min_wait = 3.0
max_wait = 6.0

[node name="ChooseRandomAttack" type="Node" parent="QuiverAiStateMachine/Phase1" index="1"]
script = ExtResource("17_5k63d")
_weights_by_child = {
"ComboAttack": 1.40325,
"DashAttack": 0.596751
}
allow_repeated = true

[node name="ComboAttack" type="Node" parent="QuiverAiStateMachine/Phase1/ChooseRandomAttack" index="0"]
script = ExtResource("18_thg3o")

[node name="ChaseClosestPlayer" type="Node" parent="QuiverAiStateMachine/Phase1/ChooseRandomAttack/ComboAttack" index="0"]
script = ExtResource("19_3m5ed")
_max_chase_time = 5.0
path_follow_state = "Ground/Move/Follow"

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase1/ChooseRandomAttack/ComboAttack" index="1"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackCombo"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="DashAttack" type="Node" parent="QuiverAiStateMachine/Phase1/ChooseRandomAttack" index="1"]
script = ExtResource("18_thg3o")

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase1/ChooseRandomAttack/DashAttack" index="0"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackDash"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="Phase2" type="Node" parent="QuiverAiStateMachine" index="3"]

[node name="Wait" type="Node" parent="QuiverAiStateMachine/Phase2" index="0"]
script = ExtResource("13_oq38d")
use_range = true
wait_time = 0.0
min_wait = 2.0
max_wait = 4.0

[node name="ChooseRandomAttack" type="Node" parent="QuiverAiStateMachine/Phase2" index="1"]
script = ExtResource("17_5k63d")
_weights_by_child = {
"AreaAttack": 1.20646,
"ComboAttack": 0.59407,
"DashAttack": 1.19947
}
allow_repeated = true

[node name="ComboAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack" index="0"]
script = ExtResource("18_thg3o")

[node name="ChaseClosestPlayer" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack/ComboAttack" index="0"]
script = ExtResource("19_3m5ed")
_max_chase_time = 5.0
path_follow_state = "Ground/Move/Follow"

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack/ComboAttack" index="1"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackCombo"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="DashAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack" index="1"]
script = ExtResource("18_thg3o")

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack/DashAttack" index="0"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackDash"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="AreaAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack" index="2"]
script = ExtResource("18_thg3o")

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase2/ChooseRandomAttack/AreaAttack" index="0"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackArea"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="Phase3" type="Node" parent="QuiverAiStateMachine" index="4"]

[node name="Wait" type="Node" parent="QuiverAiStateMachine/Phase3" index="0"]
script = ExtResource("13_oq38d")
use_range = true
wait_time = 0.0
min_wait = 1.0
max_wait = 2.0

[node name="ChooseRandomAttack" type="Node" parent="QuiverAiStateMachine/Phase3" index="1"]
script = ExtResource("17_5k63d")
_weights_by_child = {
"ComboAttack": 0.703429,
"DashAttack": 1.29657
}
allow_repeated = true

[node name="ComboAttack" type="Node" parent="QuiverAiStateMachine/Phase3/ChooseRandomAttack" index="0"]
script = ExtResource("18_thg3o")

[node name="ChaseClosestPlayer" type="Node" parent="QuiverAiStateMachine/Phase3/ChooseRandomAttack/ComboAttack" index="0"]
script = ExtResource("19_3m5ed")
_max_chase_time = 5.0
path_follow_state = "Ground/Move/Follow"

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase3/ChooseRandomAttack/ComboAttack" index="1"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackCombo"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[node name="DashAttack" type="Node" parent="QuiverAiStateMachine/Phase3/ChooseRandomAttack" index="1"]
script = ExtResource("18_thg3o")

[node name="CallAttack" type="Node" parent="QuiverAiStateMachine/Phase3/ChooseRandomAttack/DashAttack" index="0"]
script = ExtResource("20_38efy")
attack_state_path = "Ground/AttackDash"
combo_hits_amount = 1
fallback_state_path = "Ground/Move/IdleAi"

[connection signal="phase_changed_to" from="." to="QuiverAiStateMachine" method="_on_tax_man_phase_changed_to"]
[connection signal="dash_attack_failed" from="Skin" to="StateMachine/Ground/AttackDash" method="_on_skin_dash_attack_failed"]
[connection signal="dash_attack_succeeded" from="Skin" to="StateMachine/Ground/AttackDash" method="_on_skin_dash_attack_succeeded"]
[connection signal="skin_animation_finished" from="Skin" to="StateMachine/Ground/GrabReject" method="_on_skin_skin_animation_finished"]
[connection signal="skin_animation_finished" from="Skin" to="StateMachine/Ground/Hurt" method="_on_skin_skin_animation_finished"]
[connection signal="skin_animation_finished" from="Skin" to="StateMachine/Ground/KnockoutKneeled" method="_on_skin_skin_animation_finished"]
